; ModuleID = '/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_zlog.c_zlog_stream_buf_alloc.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_zlog.c_zlog_stream_buf_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zlog_stream = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64 }

@zlog_limit = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.zlog_stream*)* @zlog_stream_buf_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zlog_stream_buf_alloc(%struct.zlog_stream* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.zlog_stream*, align 8
  store %struct.zlog_stream* %0, %struct.zlog_stream** %3, align 8
  %4 = load %struct.zlog_stream*, %struct.zlog_stream** %3, align 8
  %5 = getelementptr inbounds %struct.zlog_stream, %struct.zlog_stream* %4, i32 0, i32 1
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %21

9:                                                ; preds = %1
  %10 = load %struct.zlog_stream*, %struct.zlog_stream** %3, align 8
  %11 = getelementptr inbounds %struct.zlog_stream, %struct.zlog_stream* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i32, i32* @zlog_limit, align 4
  %15 = load %struct.zlog_stream*, %struct.zlog_stream** %3, align 8
  %16 = getelementptr inbounds %struct.zlog_stream, %struct.zlog_stream* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = call i64 @MIN(i32 %14, i32 %17)
  %19 = icmp sge i64 %13, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %9
  store i32 1, i32* %2, align 4
  br label %24

21:                                               ; preds = %9, %1
  %22 = load %struct.zlog_stream*, %struct.zlog_stream** %3, align 8
  %23 = call i32 @zlog_stream_buf_alloc_ex(%struct.zlog_stream* %22, i32 0)
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %21, %20
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i64 @MIN(i32, i32) #1

declare dso_local i32 @zlog_stream_buf_alloc_ex(%struct.zlog_stream*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
